Fix link color to be nicer (especially in dark mode).

--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,7 @@ body:before {
   display: flex;
   flex-direction: column;
 }
+
+a {
+  color: #00b0ff;
+}
